--- a/package.json
+++ b/package.json
@@ -1,38 +1,21 @@
 {
   "name": "loyalty-wallet",
-  "version": "0.1.0",
-  "description": "Backend for Loyalty Wallet application",
-  "main": "src/index.js",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon --watch src --exec \"node\" src/index.js",
-    "test": "echo \"No tests specified\" && exit 0",
-    "lint": "eslint ."
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/samm0000/loyalty-wallet.git"
-  },
-  "keywords": [
-    "loyalty",
-    "wallet",
-    "node"
-  ],
-  "author": "samm0000",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/samm0000/loyalty-wallet/issues"
-  },
-  "homepage": "https://github.com/samm0000/loyalty-wallet#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "@zxing/browser": "^0.1.5",
+    "idb": "^8.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "eslint": "^8.39.0"
-  },
-  "engines": {
-    "node": ">=14"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.0"
   }
 }
