--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@zxing/browser": "^0.1.5",
     "idb": "^8.0.0",
+    "jsbarcode": "^3.11.6",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
