--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@zxing/browser": "^0.1.5",
-    "framer-motion": "^11.3.21",
-    "idb": "^8.0.0",
+    "framer-motion": "^11.3.19",
     "jsbarcode": "^3.11.6",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
@@ -20,6 +19,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.0"
+    "vite": "^5.4.3"
   }
 }
